--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Singing">
-        <activity android:name=".PartPractice"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".PartPractice" />
         <activity android:name=".ChoiceLevel" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
