--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.goodjob.singing">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,20 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Singing">
-        <activity
-            android:name=".ChoiceSong"
-            android:label="@string/title_activity_choice_song"
-            android:theme="@style/Theme.Singing.NoActionBar"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".PartPractice" />
-        <activity android:name=".ChoiceLevel" />
+
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChoiceSong" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".PartPractice" />
+        <activity android:name=".ChoiceLevel" />
     </application>
 
 </manifest>
