--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation fileTree(dir: '/Users/haram/AndroidStudioProjects/singing/app/libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    implementation fileTree(dir: '/Users/daheehan/Downloads', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
