--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".PartPractice" />
         <activity android:name=".ChoiceLevel" />
+        <activity android:name=".PartPractice_Plane2" />
     </application>
 
 </manifest>
