떴다떴다비행기 2,3,4 class 등록

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".PartPractice" />
         <activity android:name=".ChoiceLevel" />
         <activity android:name=".PartPractice_Plane2" />
+        <activity android:name=".PartPractice_Plane3" />
+        <activity android:name=".PartPractice_Plane4" />
     </application>
 
 </manifest>
