--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation fileTree(dir: '/Users/haram/AndroidStudioProjects/singing/app/libs', include: ['*.aar', '*.jar'], exclude: [])
+    //implementation fileTree(dir: '/Users/haram/AndroidStudioProjects/singing/app/libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    //implementation fileTree(dir: 'C:\\Users\\lyw34\\AndroidStudioProjects\\GoddJobProject\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: 'C:\\Users\\lyw34\\AndroidStudioProjects\\GoddJobProject\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
     //implementation fileTree(dir: '/Users/daheehan/Downloads', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
