옹달샘 자바 코드

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ChoiceLevel" />
         <activity android:name=".LowChoiceSong" />
         <activity android:name=".MiddleChoiceSong" />
+        <activity android:name=".HighChoiceSong" />
         <activity android:name=".PartPracticePlane1" />
         <activity android:name=".PartPracticePlane2" />
         <activity android:name=".PartPracticePlane3" />
@@ -43,6 +44,7 @@
         <activity android:name=".PartPracticeODS5" />
         <activity android:name=".PartPracticeODS6" />
         <activity android:name=".PartPracticeODS7" />
+        <activity android:name=".PartPracticeODS8" />
     </application>
 
 </manifest>
