--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     implementation fileTree(dir: '/Users/daheehan', include: ['*.aar', '*.jar'], exclude: [])
     implementation fileTree(dir: '/Users/daheehan/Downloads', include: ['*.aar', '*.jar'], exclude: [])
-    implementation fileTree(dir: 'C:\\Users\\lyw34\\AndroidStudioProjects\\GoddJobProject\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation fileTree(dir: '/Users/daheehan/Downloads', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: '/Users/daheehan/Desktop/GoddJobProject/app', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: '/Users/daheehan/Desktop/GoddJobProject/app', include: ['*.aar', '*.jar'], exclude: [])
     //implementation fileTree(dir: '/Users/daheehan/Downloads', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
